from 1.2.2 to 1.2.3
- dumpconfig option to understand effective config
- user configuration options

from 1.2.1 to 1.2.2
- cache directory defined and set
- improved management of active configurations
- bumped ucommon dependency up to 5.2.0

from 1.2.0 to 1.2.1
- sip server command line interface options per Simon request
- start of cache support for peers, multicast users, etc
- manpage standardization

from 1.1.4 to 1.2.0
- removed uneeded subscriber thread, cleared cpu usage with plugin.

from 1.1.3 to 1.1.4
- switchview icon resources now themable, new icon resources added.
- icon resources now used in switchview menu.

from 1.1.2 to 1.1.3
- waiting threads include error handling and throttling.

from 1.1.1 to 1.1.2
- cmake fix for openssl check.
- renaming and reorg of sipwitch cgi binary.

from 1.1.0 to 1.1.1
- notify watcher for config directory.

from 1.0.3 to 1.1.0
- added switchview gui client to package.

from 1.0.2 to 1.0.3
- fix for init script.
- -d also alt background flag for convenience.

from 1.0.1 to 1.0.2
- new server redirection api.  This allows plugins to operate without
  having to be linked explicitly to and directly call exosip functions.
- documented plugin api and runtime headers
- service::publish proper handling of NULL address

from 1.0.0 to 1.0.1
- require ucommon 5.0.0
- fixes for plugin paths
- plugins report load-time errors after syslog initialized, not before

from version 0.10.5 to 0.10.6 and 1.0.0
- using events sync to validate connections and pass down housekeeping clock.
- event ipc extended multiplatform by fallback to localhost inet socket.

from version 0.10.4 to 0.10.5
- more consistent paths in cmake.

from version 0.10.3 to 0.10.4
- small fix for cmake from gahr.

from version 0.10.2 to 0.10.3
- some cross-platform portability fixes.

from version 0.10.1 to 0.10.2
- some reorganization of sources and common process code.

from version 0.10.0 to 0.10.1
- events dispatch ipc service added