@@ -86,6 +86,9 @@ notify server interface came up.
 .BI message " ext ``Text''"
 send a short text message to a registered extension.
 .TP
+.B peering
+print server peering (published) addresss.
+.TP
 .BI period " interval"
 dump periodic stats for specified minute interval, often used for cron.
 .TP
