@@ -1,6 +1,7 @@
 from 1.2.2 to 1.2.3
 - dumpconfig option to understand effective config
 - user configuration options
+- sipwitch peering command added
 
 from 1.2.1 to 1.2.2
 - cache directory defined and set
